# StudyDemo

./: .gitignore  Record.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  FFmpegPlayer.cpp  FFmpegPlayer.h  FfmpegPlayer.cpp  FfmpegPlayer.h  JNICallbakcHelper.cpp  JNICallbakcHelper.h  VideoChannel.cpp  VideoChannel.h  log4c.h  native-lib.cpp  safe_queue.h  util.h
app/src/main/java/top/newjourney/video/: FFmpegPlayer.java  MainActivity.java
app/src/main/java/top/newjourney/video/customview/: ColorTrackTextView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: attrs.xml  strings.xml
ffmpeg_so/: ffmpeg_build.sh  readme.md
gradle/wrapper/: gradle-wrapper.properties
